--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
         <textarea id="playerInput" rows="6" placeholder="Sam\nMina\nAlex"></textarea>
       </label>
 
+      <div class="field double-field">
+        <label class="field">
+          <span class="field-label">Language</span>
+          <select id="languageSelect">
+            <option value="en">English</option>
+            <option value="ca">Catalan</option>
+            <option value="fr">French</option>
+          </select>
+        </label>
+
+        <label class="field">
+          <span class="field-label">Level (CEFR)</span>
+          <select id="levelSelect">
+            <option value="A1">A1</option>
+            <option value="A2">A2</option>
+            <option value="B1">B1</option>
+            <option value="B2">B2</option>
+            <option value="C1">C1</option>
+            <option value="C2">C2</option>
+          </select>
+        </label>
+      </div>
+
       <label class="field number-field">
         <div class="field-heading">
           <span class="field-label">Number of impostors</span>
@@ -40,6 +63,16 @@
         <div>
           <p class="label">Category</p>
           <p id="categoryDisplay" class="category"></p>
+        </div>
+        <div class="meta-grid">
+          <div>
+            <p class="label">Language</p>
+            <p id="languageDisplay" class="category small"></p>
+          </div>
+          <div>
+            <p class="label">Level</p>
+            <p id="levelDisplay" class="category small"></p>
+          </div>
         </div>
         <div class="controls">
           <button id="newRound" class="primary">New round</button>
