Fix modal visibility and clean up setup UI

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   <main class="container">
     <header class="app-header">
       <h1>Impostor Game</h1>
-      <p class="tagline">Minimal ESL classroom reveal tool</p>
     </header>
 
     <section id="setupScreen" class="card">
       <h2>Setup</h2>
       <label class="field">
         <span class="field-label">Player names (one per line)</span>
-        <textarea id="playerInput" rows="6" placeholder="Sam\nMina\nAlex"></textarea>
+        <textarea id="playerInput" rows="6" placeholder="Sam&#10;Mina&#10;Alex"></textarea>
       </label>
 
       <div class="field double-field">
