Add starter indicator and expand word bank

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
             <p id="levelDisplay" class="category small"></p>
           </div>
         </div>
+        <div class="start-player-panel">
+          <div>
+            <p class="label">Starting player</p>
+            <p id="startPlayerDisplay" class="category small"></p>
+          </div>
+          <p class="hint">This player begins the round and could be the impostor.</p>
+        </div>
         <div class="controls">
           <button id="newRound" class="primary">New round</button>
           <button id="editPlayers" type="button" class="ghost">Edit players</button>
