Add secure impostor reveal control

--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
           <button id="newRound" class="primary">New round</button>
           <button id="editPlayers" type="button" class="ghost">Edit players</button>
           <button id="hardReset" type="button" class="danger">Hard reset</button>
+          <button id="showImpostors" type="button" class="danger" disabled>Reveal impostor(s)</button>
         </div>
       </div>
 
       <div id="playersList" class="players"></div>
+      <div id="impostorReveal" class="impostor-reveal hidden" aria-live="polite"></div>
     </section>
   </main>
 
